# Mono-Navigation

./: LICENSE  README.md
1_tello_driver_ws/: README.md
1_tello_driver_ws/src/teleop_twist_keyboard/: README.md
1_tello_driver_ws/src/tello_driver/: CMakeLists.txt  README.md  package.xml  setup.py
1_tello_driver_ws/src/tello_driver/bag/: record.sh
1_tello_driver_ws/src/tello_driver/cfg/: 384x288.yaml  960x720.yaml  Tello.cfg
1_tello_driver_ws/src/tello_driver/launch/: joy_teleop.launch  logger.launch  tello_node.launch  tello_node_wo_image.launch  tello_orb_joy_teloop.launch  tello_teloop.launch  thesis_tello_node.launch
1_tello_driver_ws/src/tello_driver/nodes/: gamepad_teleop_node  tello_driver_node
1_tello_driver_ws/src/tello_driver/src/: test_h264_sub.py
1_tello_driver_ws/src/tello_driver/src/TelloPy/easytello/: stats.py  tello.py
1_tello_driver_ws/src/tello_driver/src/TelloPy/tellopy/_internal/: tello.py
1_tello_driver_ws/src/tello_driver/srv/: MoveDown.srv
2_monocular_depth_ROS/: README.md
2_monocular_depth_ROS/midas_ws/src/: launch_midas_cpp.sh  run_talker_listener_test.sh
2_monocular_depth_ROS/midas_ws/src/midas_cpp/: midas_cpp
2_monocular_depth_ROS/packnet_sfm_ws/src/packnet_sfm_ros/: CMakeLists.txt  README.md  package.xml  setup.py
2_monocular_depth_ROS/sc_depth_pl_ws/src/sc_depth_pl_ros/: CMakeLists.txt  package.xml  setup.py
3_data_proc_ws/: README.md
3_data_proc_ws/src/data_proc/: CMakeLists.txt  package.xml
3_data_proc_ws/src/data_proc/config/: camera_info.yaml  camera_info_960_720.yaml
3_data_proc_ws/src/data_proc/launch/: data_proc_midas.launch  data_proc_monodepth.launch  data_proc_sc_depth.launch  depth_repub.launch
3_data_proc_ws/src/data_proc/scripts/: data_proc_midas.py  data_proc_monodepth.py  data_proc_sc_depth.py  depth_repub_enhanced.py  guide.txt
4_orb_slam_2_ws/: README.md
5_fast_planner_ws/: README.md
6_drone_controller_ws/: README.md
6_drone_controller_ws/src/drone_controller/: CMakeLists.txt  package.xml
6_drone_controller_ws/src/drone_controller/launch/: monodepth_drone_controller.launch  sc_depth_drone_controller.launch  test_vel.launch
tello_driver/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
(+162 files in other folders)
